--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kickbuttowaski.github.io/doctor_site",
+  "homepage": "https://Kickbuttowaski.github.io/doctor_site",
   "name": "doctor_site",
   "version": "0.1.0",
   "private": true,
