--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "doctor_site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Kickbuttowaski.github.io/doctor_site",
+  "homepage": "http://Kickbuttowaski.github.io/doctor_site",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
